<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity"
    style="@style/activity_editor_main_linear_layout_style">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout style="@style/activity_editor_linear_layouts_style">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />


        </LinearLayout>

    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/activity_editor_linear_layout"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout style="@style/activity_editor_supplier_linear_layout_style">


            <EditText
                android:id="@+id/edit_product_supplier"
                android:hint="@string/hint_product_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_supplier_phone"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
