<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name"
        style="@style/list_item_text_view_style"
        tools:text="@string/list_item_tools_name" />

    <TextView
        android:id="@+id/price"
        style="@style/list_item_text_view_style"
        android:layout_below="@+id/name"
        tools:text="@string/list_item_tools_price" />

    <TextView
        android:id="@+id/quantity"
        style="@style/list_item_text_view_style"
        android:layout_below="@+id/price"
        tools:text="@string/list_item_tools_quantity" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/list_item_button_margin"
        android:focusable="false"
        android:text="@string/list_item_button_text" />

</RelativeLayout>